--- a/Untitled13.ipynb
+++ b/Untitled13.ipynb
@@ -102,7 +102,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 366
+          "height": 514
         },
         "id": "eekCmo98sEAc",
         "outputId": "2eb70453-8a24-48c7-d539-4c34be8e09eb"
@@ -322,7 +322,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 395
+          "height": 410
         },
         "id": "zWlTLyJoXlLp",
         "outputId": "f0c05b4a-5d3f-40a1-c380-2b912612ff5d"
@@ -512,26 +512,54 @@
       "cell_type": "code",
       "source": [
         "from tensorflow.keras.models import load_model\n",
-        "# Load the trained model\n",
-        "model = load_model('model.h5')"
+        "\n",
+        "# Load the old HDF5 model (safely)\n",
+        "model = load_model(\"model.h5\", compile=False, safe_mode=False)\n",
+        "\n",
+        "# Save in new format\n",
+        "model.save(\"model.keras\")\n",
+        "\n",
+        "print(\"✅ Model converted successfully to model.keras format!\")\n"
       ],
       "metadata": {
+        "id": "DqfVQEmXVS3v",
+        "outputId": "9b84d67a-6d60-404b-b46f-7c68ba9ad48d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "-4gKq-b7aLoV",
-        "outputId": "ad86423c-938c-454e-8e97-0cc6745b6ca8"
+        }
       },
-      "execution_count": 27,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stderr",
+          "name": "stdout",
           "text": [
-            "WARNING:absl:Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n"
+            "✅ Model converted successfully to model.keras format!\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from tensorflow.keras.models import load_model\n",
+        "# Load the trained model\n",
+        "model = load_model(\"model.h5\", compile=False, safe_mode=False)\n"
+      ],
+      "metadata": {
+        "id": "-4gKq-b7aLoV"
+      },
+      "execution_count": 41,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "baw60heRVRfy"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -684,12 +712,12 @@
         "print(test_labels.class_indices)\n"
       ],
       "metadata": {
-        "id": "-5BHKZVgLWD5",
-        "outputId": "f6aa6de8-fe1f-4821-dce1-7e9b00a4c39f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 141
-        }
+        },
+        "id": "-5BHKZVgLWD5",
+        "outputId": "f6aa6de8-fe1f-4821-dce1-7e9b00a4c39f"
       },
       "execution_count": 21,
       "outputs": [
@@ -713,7 +741,7 @@
       "gpuType": "T4",
       "provenance": [],
       "mount_file_id": "1MeMhVx-dVkv7I-YFa9cGeZr7_BiWOaCe",
-      "authorship_tag": "ABX9TyP0Pjv+PKeXLDhDa51AW1BF",
+      "authorship_tag": "ABX9TyNLT2B6tKovmIJBXP4QEFMQ",
       "include_colab_link": true
     },
     "kernelspec": {
